# shop-app

./: .gitignore  pyproject.toml
shop_app/: items_views.py  main.py
shop_app/users/: crud.py  views.py
